# nexus-mcp

./: .gitignore  README.md  config.py  main.py  pyproject.toml
services/: gcalendar.py  google_news.py  logger.py  obsidian.py  parser.py  trello_service.py
